# uv-pytorch-tmplt

./: README.md  env.md  pyproject.toml  testcuda.py
