[project]
name = "zt-zjj-kpconv-pytorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "matplotlib",
  "mayavi",
  "numpy<1.23.0",
  "setuptools<65",
  "pyqt5",
  "pyyaml",
  "scikit-learn",
  "torch[cu128]",
  "torchaudio[cu128]",
  "torchvision[cu128]",
]

[project.optional-dependencies]
cpu = ["torch", "torchvision", "torchaudio"]
cu128 = ["torch", "torchvision", "torchaudio"]

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "cu128" }]]

[tool.uv.sources]
torch = [
  { index = "torchcpu", extra = "cpu" },
  { index = "torchcu128", extra = "cu128" },
]
torchvision = [
  { index = "torchcpu", extra = "cpu" },
  { index = "torchcu128", extra = "cu128" },
]
torchaudio = [
  { index = "torchcpu", extra = "cpu" },
  { index = "torchcu128", extra = "cu128" },
]

[[tool.uv.index]]
name = "torchcpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "torchcu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
